--- a/front_end/package.json
+++ b/front_end/package.json
@@ -7,7 +7,9 @@
     "react-router-dom": "^7.6.0"
   },
     "scripts": {
-    "build": "vite build"
-    }
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
 }
+
 
